<?xml version="1.0"?>
<package>
  <name>hlpr_gazebo</name>
  <version>1.0.0</version>
  <description>
     HLP-R common platform (Stanley Vector) Gazebo scripts and launch files 
  </description>

  <author email="dev@stanleyinnovation.com">Patrick Hussey</author>
  <author email="vchu@gatech.edu">Vivian Chu</author>
  <maintainer email="vchu@gatech.edu">Vivian Chu</maintainer>

  <url type="website">https://github.com/HLP-R/hlpr_simulator/wiki</url>
  <url type="bugtracker">https://github.com/HLP-R/hlpr_simulator/issues</url>
  <url type="repository">https://github.com/HLP-R/hlpr_simulator</url>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>vector_msgs</run_depend>
  <run_depend>vector_ros</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>control_msgs</run_depend>

  <export>
  </export>
</package>
